INSTALL (FILES 

automask.xml
boxblur.xml
brightness.xml
charcoal.xml
chroma_hold.xml
chroma.xml
freeze.xml
gamma.xml
greyscale.xml
invert.xml
ladspa_declipper.xml
ladspa_equalizer.xml
ladspa_limiter.xml
ladspa_phaser.xml
ladspa_pitch_scale.xml
ladspa_pitch.xml
ladspa_rate_scale.xml
ladspa_reverb.xml
ladspa_room_reverb.xml
ladspa_vinyl.xml
mirror.xml
mute.xml
normalise.xml
obscure.xml
rotation.xml
sepia.xml
sox_echo.xml
sox_flanger.xml
sox_pitch.xml
sox_reverb.xml
sox_vibro.xml
threshold.xml
volume.xml
wave.xml
fadein.xml
fadeout.xml

DESTINATION ${DATA_INSTALL_DIR}/kdenlive/effects)
