include_directories(${MLT_INCLUDE_DIR})
add_executable(fuzz main_fuzzer.cpp fuzzing.cpp)
add_executable(fuzz_reproduce main_reproducer.cpp fuzzing.cpp)
target_link_libraries(fuzz kdenliveLib)
target_link_libraries(fuzz_reproduce kdenliveLib)
set_property(TARGET fuzz PROPERTY CXX_STANDARD 14)
set_property(TARGET fuzz_reproduce PROPERTY CXX_STANDARD 14)
set_target_properties(fuzz PROPERTIES COMPILE_FLAGS "-O1 -g -Wall -pedantic -Wextra -fexceptions -fsanitize=fuzzer,address")
set_target_properties(fuzz PROPERTIES LINK_FLAGS "-fsanitize=fuzzer")
