####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = norenderer.png 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/kdenlive/graphics/
	$(INSTALL_DATA) $(srcdir)/norenderer.png $(kde_datadir)/kdenlive/graphics/norenderer.png

uninstall-local:
	-rm -f $(kde_datadir)/kdenlive/graphics/norenderer.png

####### kdevelop will overwrite this part!!! (end)############
